# vat-bot-1

./: .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_DASHBOARD.md  AGENT_SDK_SETUP_FINAL.md  AGENT_SYSTEM_PROMPT.md  AI_ASSISTANT_FILE_SCANNER_FIX.md  AUTHENTICATION_FEATURES.md  AUTH_IMPLEMENTATION.md  CHANGELOG.md  CHATBOT_DEPLOYMENT.md  CHATBOT_SETUP.md  CHATBOT_SETUP_UA.md  CHATBOT_TROUBLESHOOTING.md  CHEAT_SHEET.md  CHECKLIST_EMAIL_DISABLED.md  CHECK_ROUTES_RENDER.md  CHECK_SCHEMA.md  COMMANDS_TO_COPY.md  COMPANY_PROFILE_FEATURE.md  COMPLETE_TEST_MODE_SUMMARY.md  COMPLETION_SUMMARY.md  CRITICAL_FIXES_REPORT.md  CRM_DELETE_FEATURES.md  CRM_DELETE_UI_GUIDE.md  CRM_IMPLEMENTATION_SUMMARY.md  CRM_INTEGRATION_FIX.md  CRM_MONITORING_STATUS.md  CRM_NAVBAR_ADDED.md  CRM_TEST_RESULTS.md  DATABASE_SSL_FIX.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  DEPLOY_QUICK.md  ENRICHMENT_GUIDE.md  EUROPEAN_PHONE_INTEGRATION.md  FIX_EMPTY_DATABASE.md  FIX_MIGRATION.md  FOOTER_LINKS_FIXED.md  (+102 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
admin/: __init__.py  routes.py
app/: __init__.py
auth/: __init__.py  forms.py  models.py  routes.py
compliance_checker/: routes.py
consumer_panel/: routes.py
crm/: __init__.py  models.py  monitor.py  monitoring_scheduler.py  osint_models.py  routes.py  save_results.py  scheduler.py
docs/: BACKUP.md  GMAIL_ATTACHMENT_SCANNING.md  MAILGUARD_USER_EXPERIENCE.md  NIS2_IMPLEMENTATION_PLAN.md  OAUTH_SETUP_QUICKSTART.md  VIRUSTOTAL_SETUP_QUICKSTART.md
file_scanner/: ARCHITECTURE.md  EMAIL_SCAN_API.md  README.md  SECURITY.md  __init__.py  routes.py
legal/: __init__.py  routes.py
link_scanner/: __init__.py  routes.py
migrations/: 001_initial_schema.py
notifications/: __init__.py  alerts.py
payments/: __init__.py  routes.py  webhooks.py
programmatic/: __init__.py  routes.py
public/: llms.txt  sitemap.xml
routes/: blog.py  enrichment.py  geo_sme_routes.py  main.py  phoneintel.py  sitemap.py
scripts/: backup_db.sh  create_test_osint_scan.py  generate_blog.py  generate_programmatic_seo.py  render_and_validate.py  submit_sitemap.py
services/: alerts.py  blog_generator.py  business_registry.py  chatbot_routes.py  chatbot_routes_sdk.py  enrichment_flow.py  handelsregister.py  insolvenz.py  linkedin_publisher.py  monitoring.py  osint_routes.py  rate_limiter.py  sales_chatbot.py  sanctions.py  scheduler.py  security_helpers.py  ua_registry_service.py  vat_lookup.py  vat_validator.py  vies.py
static/: ads.txt  ai-instructions.md  ai.txt  robots.txt
templates/: analytics.html  base.html  check_details.html  history.html  index.html  (+4 more)
(+253 files in other folders)
