[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "migrations/",
    "scripts/",
    "translations/",
    ".venv/",
    "build/",
    "dist/",
    "*.bak",
]

[tool.ruff.lint]
# E = pycodestyle, F = pyflakes, W = warnings, I = isort, B = bugbear
# C4 = flake8-comprehensions, UP = pyupgrade, S = bandit-style
select = ["E", "F", "W", "I", "B", "C4", "UP", "S"]
ignore = [
    "E501",   # line too long — handled by formatter
    "S101",   # assert used — OK in tests
    "S105",   # hardcoded password — false positives in config defaults/examples
    "S106",   # hardcoded password arg
    "S107",   # hardcoded password default
    "B008",   # function call in default arg — Flask routing pattern
    "S311",   # standard pseudo-random — not used for crypto
    "UP007",  # X | Y union syntax — keep 3.9 compat
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "S101", "S106"]
"migrations/**" = ["ALL"]
"scripts/**" = ["S", "E", "F"]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "scripts", ".venv"]
skips = ["B101", "B311"]  # assert_used, random

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
